--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build/app.js",
     "dev": "ts-node src/app.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "buildDiagnostic": "tsc -b -f -diagnostics",
+    "buildGo": "tsgo"
   },
   "author": "Likesh Kewat",
   "license": "ISC",
@@ -31,6 +33,7 @@
     "ioredis": "^5.5.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
+    "redis": "^4.7.0",
     "sequelize": "^6.37.5"
   }
 }
